--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 project1/.ipynb_checkpoints/project1-checkpoint.ipynb
 project2/data
 project2/predictions_training
+project2/saved_models
+project2/predictions_test
